[package]
name = "ipcamera_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {version = "0.15.0"}
# telegram-bot = "0.8.0"
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2.0"
log = "0.4.14"
env_logger = "0.9.0"
retina = "0.4.5"
url = "2.5.0"
anyhow = "1.0.41"
bytes = "1.0.1"
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"